--- a/your-code/main.ipynb
+++ b/your-code/main.ipynb
@@ -18,11 +18,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "import numpy as np\n",
+    "import pandas as pd"
    ]
   },
   {
@@ -34,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,11 +45,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "lst_pd = pd.DataFrame(lst)"
    ]
   },
   {
@@ -61,11 +64,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "74.4"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "lst_pd[0][2]"
    ]
   },
   {
@@ -77,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,11 +110,100 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      0     1     2     3     4\n",
+       "0  53.1  95.0  67.5  35.0  78.4\n",
+       "1  61.3  40.8  30.8  37.8  87.6\n",
+       "2  20.6  73.2  44.2  14.6  91.8\n",
+       "3  57.4   0.1  96.1   4.2  69.5\n",
+       "4  83.6  20.5  85.4  22.8  35.9"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_pd = pd.DataFrame(b)\n",
+    "b_pd.head()"
    ]
   },
   {
@@ -111,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,11 +224,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_2</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_4</th>\n",
+       "      <th>Score_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>61.3</td>\n",
+       "      <td>40.8</td>\n",
+       "      <td>30.8</td>\n",
+       "      <td>37.8</td>\n",
+       "      <td>87.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>20.6</td>\n",
+       "      <td>73.2</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>14.6</td>\n",
+       "      <td>91.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>57.4</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>96.1</td>\n",
+       "      <td>4.2</td>\n",
+       "      <td>69.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>83.6</td>\n",
+       "      <td>20.5</td>\n",
+       "      <td>85.4</td>\n",
+       "      <td>22.8</td>\n",
+       "      <td>35.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>49.0</td>\n",
+       "      <td>69.0</td>\n",
+       "      <td>0.1</td>\n",
+       "      <td>31.8</td>\n",
+       "      <td>89.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>23.3</td>\n",
+       "      <td>40.7</td>\n",
+       "      <td>95.0</td>\n",
+       "      <td>83.8</td>\n",
+       "      <td>26.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>27.6</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>53.8</td>\n",
+       "      <td>88.8</td>\n",
+       "      <td>68.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>96.6</td>\n",
+       "      <td>96.4</td>\n",
+       "      <td>53.4</td>\n",
+       "      <td>72.4</td>\n",
+       "      <td>50.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>73.7</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>43.2</td>\n",
+       "      <td>81.6</td>\n",
+       "      <td>34.7</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_2  Score_3  Score_4  Score_5\n",
+       "0     53.1     95.0     67.5     35.0     78.4\n",
+       "1     61.3     40.8     30.8     37.8     87.6\n",
+       "2     20.6     73.2     44.2     14.6     91.8\n",
+       "3     57.4      0.1     96.1      4.2     69.5\n",
+       "4     83.6     20.5     85.4     22.8     35.9\n",
+       "5     49.0     69.0      0.1     31.8     89.1\n",
+       "6     23.3     40.7     95.0     83.8     26.9\n",
+       "7     27.6     26.4     53.8     88.8     68.5\n",
+       "8     96.6     96.4     53.4     72.4     50.1\n",
+       "9     73.7     39.0     43.2     81.6     34.7"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_pd.columns = colnames"
    ]
   },
   {
@@ -136,11 +373,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Score_1</th>\n",
+       "      <th>Score_3</th>\n",
+       "      <th>Score_5</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>53.1</td>\n",
+       "      <td>67.5</td>\n",
+       "      <td>78.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Score_1  Score_3  Score_5\n",
+       "0     53.1     67.5     78.4"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "b_pd_subset = b_pd[['Score_1','Score_3', 'Score_5']]\n",
+    "b_pd_subset.head(1)"
    ]
   },
   {
@@ -152,11 +438,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "56.95"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "round(b_pd['Score_3'].mean(),2)"
    ]
   },
   {
@@ -168,11 +466,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "88.8"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "round(b_pd['Score_4'].max(),2)"
    ]
   },
   {
@@ -184,11 +494,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "40.75"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "round(b_pd['Score_2'].median(),2)"
    ]
   },
   {
@@ -200,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,11 +543,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>Revenue</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>LUNCH BAG APPLE DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SET OF 60 VINTAGE LEAF CAKE CASES</td>\n",
+       "      <td>24</td>\n",
+       "      <td>0.55</td>\n",
+       "      <td>13.20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>RIBBON REEL STRIPES DESIGN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.65</td>\n",
+       "      <td>1.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WORLD WAR 2 GLIDERS ASSTD DESIGNS</td>\n",
+       "      <td>2880</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>518.40</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>PLAYING CARDS JUBILEE UNION JACK</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1.25</td>\n",
+       "      <td>2.50</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                          Description  Quantity  UnitPrice  Revenue\n",
+       "0              LUNCH BAG APPLE DESIGN         1       1.65     1.65\n",
+       "1  SET OF 60 VINTAGE LEAF CAKE CASES         24       0.55    13.20\n",
+       "2         RIBBON REEL STRIPES DESIGN          1       1.65     1.65\n",
+       "3   WORLD WAR 2 GLIDERS ASSTD DESIGNS      2880       0.18   518.40\n",
+       "4    PLAYING CARDS JUBILEE UNION JACK         2       1.25     2.50"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "orders_pd = pd.DataFrame.from_dict(orders)\n",
+    "orders_pd.head()"
    ]
   },
   {
@@ -237,11 +642,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Quantity    2978.0\n",
+       "Revenue      637.0\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "orders_pd[['Quantity', 'Revenue']].sum()"
    ]
   },
   {
@@ -253,12 +672,30 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.77\n"
+     ]
+    }
+   ],
+   "source": [
+    "# your code here\n",
+    "max_price = orders_pd['UnitPrice'].max()\n",
+    "min_price = orders_pd['UnitPrice'].min()\n",
+    "print(max_price-min_price)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# your code here"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -277,7 +714,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
